--- a/src/app/conversion-history/conversion-history.html
+++ b/src/app/conversion-history/conversion-history.html
@@ -1,41 +1,60 @@
 <div class="container-fluid py-5">
   <div class="row justify-content-center">
     <div class="col-12 col-md-10 col-lg-8">
-      <mat-card class="shadow-sm">
+      <mat-card class="shadow-sm elegant-card">
         <mat-card-header>
           <mat-card-title>Conversion History</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <div class="mat-elevation-z8">
-            <mat-spinner *ngIf="isLoading" class="m-auto" [diameter]="30"></mat-spinner>
-            <table mat-table [dataSource]="dataSource" class="w-100" *ngIf="!isLoading">
+          <div class="mat-elevation-z8 history-table-container">
+            <mat-spinner
+              *ngIf="isLoading"
+              class="m-auto"
+              [diameter]="30"
+            ></mat-spinner>
+            <table
+              mat-table
+              [dataSource]="dataSource"
+              class="w-100 elegant-table"
+              *ngIf="!isLoading"
+            >
               <ng-container matColumnDef="timestamp">
-                <th mat-header-cell *matHeaderCellDef> Date & Time </th>
-                <td mat-cell *matCellDef="let element"> {{element.timestamp | date:'short'}} </td>
+                <th mat-header-cell *matHeaderCellDef>Date & Time</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.timestamp | date : 'short' }}
+                </td>
               </ng-container>
 
               <ng-container matColumnDef="fromCurrency">
-                <th mat-header-cell *matHeaderCellDef> From </th>
-                <td mat-cell *matCellDef="let element"> {{element.fromCurrency}} </td>
+                <th mat-header-cell *matHeaderCellDef>From</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.fromCurrency }}
+                </td>
               </ng-container>
 
               <ng-container matColumnDef="toCurrency">
-                <th mat-header-cell *matHeaderCellDef> To </th>
-                <td mat-cell *matCellDef="let element"> {{element.toCurrency}} </td>
+                <th mat-header-cell *matHeaderCellDef>To</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.toCurrency }}
+                </td>
               </ng-container>
 
               <ng-container matColumnDef="amount">
-                <th mat-header-cell *matHeaderCellDef> Amount </th>
-                <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+                <th mat-header-cell *matHeaderCellDef>Amount</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.amount }}
+                </td>
               </ng-container>
 
               <ng-container matColumnDef="convertedAmount">
-                <th mat-header-cell *matHeaderCellDef> Converted Amount </th>
-                <td mat-cell *matCellDef="let element"> {{element.convertedAmount | number:'1.2-2'}} </td>
+                <th mat-header-cell *matHeaderCellDef>Converted Amount</th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.convertedAmount | number : '1.2-2' }}
+                </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
               <tr class="mat-row" *matNoDataRow>
                 <td class="mat-cell" colspan="5">No conversion history found.</td>
