--- a/src/app/currency-converter/currency-converter.html
+++ b/src/app/currency-converter/currency-converter.html
@@ -35,7 +35,7 @@
                     <a class="dropdown-item" (click)="converterForm.get('toCurrency')?.setValue(currency)">
                       {{ currency }}
                     </a>
-                  </li>
+                  </li> 
                 </ul>
               </div>
             </div>
@@ -44,7 +44,7 @@
               <input type="number" class="form-control" formControlName="amount" min="0.01" />
             </div>
             <div class="col-md-1 d-grid">
-              <button mat-raised-button color="primary" type="submit" [disabled]="converterForm.invalid || isLoading">
+              <button class="btn btn-secondary" type="submit" [disabled]="converterForm.invalid || isLoading">
                 <span *ngIf="!isLoading">Go</span>
                 <mat-spinner *ngIf="isLoading" [diameter]="20" color="warn"></mat-spinner>
               </button>
